--- a/index.html
+++ b/index.html
@@ -137,6 +137,29 @@ body{font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;b
 .backup-box{background:linear-gradient(135deg,#fff3e0,#ffe0b2);border:2px solid var(--orange);border-radius:16px;padding:16px;margin-top:16px}
 .backup-title{font-size:15px;font-weight:700;color:var(--orange);margin-bottom:6px}
 .backup-text{font-size:14px;color:#795548}
+.weather-card{background:#fff;border-radius:16px;margin-bottom:16px;box-shadow:0 2px 12px rgba(0,0,0,.08);overflow:hidden}
+.weather-header{display:flex;justify-content:space-between;align-items:center;padding:12px 16px;background:linear-gradient(135deg,#4fc3f7,#0288d1);color:#fff}
+.weather-title{font-size:15px;font-weight:600}
+.weather-update{font-size:11px;opacity:.85}
+.weather-grid{display:grid;grid-template-columns:1fr 1fr;gap:1px;background:#e0e0e0}
+.weather-item{background:#fff;padding:14px 12px;text-align:center}
+.weather-item.full{grid-column:span 2}
+.weather-icon{font-size:28px;margin-bottom:4px}
+.weather-label{font-size:11px;color:var(--light)}
+.weather-value{font-size:16px;font-weight:700;margin-top:2px}
+.weather-value.cold{color:#2196f3}.weather-value.warn{color:#ff9800}.weather-value.danger{color:#f44336}.weather-value.safe{color:#4caf50}
+.weather-alert{padding:12px 16px;background:#ffebee;border-left:4px solid #f44336;font-size:14px;color:#c62828;display:flex;align-items:center;gap:10px}
+.weather-alert.warn{background:#fff3e0;border-color:#ff9800;color:#e65100}
+.weather-alert.info{background:#e3f2fd;border-color:#2196f3;color:#1565c0}
+.weather-alert.safe{background:#e8f5e9;border-color:#4caf50;color:#2e7d32}
+.road-status{padding:12px 16px;border-top:1px solid #e0e0e0}
+.road-title{font-size:13px;font-weight:600;color:var(--gray);margin-bottom:8px}
+.road-item{display:flex;align-items:center;gap:8px;padding:8px 0;font-size:14px;border-bottom:1px solid #f5f5f5}
+.road-item:last-child{border-bottom:none}
+.road-dot{width:10px;height:10px;border-radius:50%}
+.road-dot.open{background:#4caf50}.road-dot.caution{background:#ff9800}.road-dot.closed{background:#f44336}.road-dot.unknown{background:#9e9e9e}
+.road-name{flex:1}.road-status-text{font-size:12px;font-weight:500}
+.road-link{color:var(--blue);font-size:12px;text-decoration:none}
 .modal{display:none;position:fixed;top:0;left:0;right:0;bottom:0;background:rgba(0,0,0,.5);z-index:200;justify-content:center;align-items:flex-end}
 .modal.active{display:flex}
 .modal-content{background:#fff;width:100%;max-width:500px;border-radius:24px 24px 0 0;padding:24px;padding-bottom:40px;max-height:90vh;overflow-y:auto}
@@ -161,7 +184,7 @@ body{font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;b
     <button class="header-sync" id="header-sync" onclick="syncData()">🔄</button>
   </header>
   <div class="content">
-    <div class="page active" id="page-itinerary"><div class="day-selector" id="day-selector"></div><div id="day-content"></div><div class="backup-box"><div class="backup-title">⚠️ 備案計畫</div><div class="backup-text">若第1天班機問題，可取消富良野住宿，第2天從機場直接到旭川。</div></div></div>
+    <div class="page active" id="page-itinerary"><div id="weather-box"></div><div class="day-selector" id="day-selector"></div><div id="day-content"></div><div class="backup-box"><div class="backup-title">⚠️ 備案計畫</div><div class="backup-text">若第1天班機問題，可取消富良野住宿，第2天從機場直接到旭川。</div></div></div>
     <div class="page" id="page-hotels"></div>
     <div class="page" id="page-spots"></div>
     <div class="page" id="page-transport"></div>
@@ -201,7 +224,19 @@ body{font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;b
 <div class="toast" id="toast"></div>
 <script>
 const STORAGE_KEY='hokkaido2026_api',IMG_BASE='./images/';
-let API_URL=localStorage.getItem(STORAGE_KEY)||'',expenses=[],isOnline=false,currentDay=1,currentPhraseFilter='all',currentExpenseFilter='all';
+let API_URL=localStorage.getItem(STORAGE_KEY)||'',expenses=[],isOnline=false,currentDay=1,currentPhraseFilter='all',currentExpenseFilter='all',weatherData=null,lastWeatherUpdate=null;
+
+// 每天的主要地點座標 (用於天氣查詢)
+const dayLocations=[
+  {day:1,name:'富良野',lat:43.3421,lon:142.3831,roads:['道央道','國道38號']},
+  {day:2,name:'旭川',lat:43.7707,lon:142.3650,roads:['國道237號','道道1160號']},
+  {day:3,name:'層雲峽',lat:43.7275,lon:142.9542,roads:['國道39號','層雲峽道路']},
+  {day:4,name:'阿寒湖',lat:43.4333,lon:144.1000,roads:['國道39號','國道240號','國道241號']},
+  {day:5,name:'十勝川',lat:42.9333,lon:143.2167,roads:['國道241號','國道38號']},
+  {day:6,name:'札幌',lat:43.0618,lon:141.3545,roads:['道東道','道央道']},
+  {day:7,name:'千歲',lat:42.8206,lon:141.6500,roads:['國道36號','道央道']},
+  {day:8,name:'新千歲',lat:42.7752,lon:141.6928,roads:['國道36號']}
+];
 
 const hotels=[
   {id:'laterre',date:'1/28',nights:'1晚',name:'富良野拉漁村酒店',jp:'ふらのラテール',location:'北海道空知郡中富良野町東1線北18号',room:'4人榻榻米',booking:'EZ訂房',images:[IMG_BASE+'laterre-1.jpg',IMG_BASE+'laterre-2.jpg',IMG_BASE+'laterre-3.jpg'],desc:'100%天然溫泉，可眺望十勝岳連峰。室內有15種溫泉浴槽，露天風呂可賞雪景。使用當地新鮮蔬菜的料理也很受歡迎。',tags:['♨️溫泉','🍳早餐','🍽️晚餐','🅿️免費停車'],nearby:[{icon:'🏪',name:'Seicomart便利商店',dist:'車程5分',nav:'セイコーマート中富良野'},{icon:'🍜',name:'唯我獨尊咖哩',dist:'車程10分',nav:'唯我独尊 富良野'},{icon:'🌸',name:'富田農場',dist:'車程8分',nav:'ファーム富田'}],price:7000},
@@ -262,12 +297,138 @@ function initCarousel(id){
 
 function init(){
   setupNav();renderDaySelector();renderDay(1);renderHotels();renderSpots();renderTransport();renderPhraseTabs();renderPhrases();renderBudgetPage();renderInfo();
+  fetchWeather(currentDay);
+  setInterval(()=>fetchWeather(currentDay),300000); // 每5分鐘更新
   if(API_URL){document.getElementById('setup-section').innerHTML='';syncData();}else renderSetup();
+}
+
+async function fetchWeather(day){
+  const loc=dayLocations.find(l=>l.day===day);
+  if(!loc)return;
+  try{
+    // 使用 Open-Meteo API (免費、無需 API Key)
+    const url=`https://api.open-meteo.com/v1/forecast?latitude=${loc.lat}&longitude=${loc.lon}&current=temperature_2m,relative_humidity_2m,apparent_temperature,precipitation,weather_code,wind_speed_10m,wind_gusts_10m&hourly=precipitation_probability,snowfall&daily=sunrise,sunset,weather_code,temperature_2m_max,temperature_2m_min,precipitation_sum,snowfall_sum&timezone=Asia/Tokyo&forecast_days=3`;
+    const res=await fetch(url);
+    const data=await res.json();
+    weatherData=data;
+    lastWeatherUpdate=new Date();
+    renderWeather(day,data,loc);
+  }catch(e){
+    console.error('Weather fetch error:',e);
+    renderWeatherError();
+  }
+}
+
+function getWeatherIcon(code){
+  // WMO Weather Code 對照
+  if(code===0)return '☀️';
+  if(code<=3)return '⛅';
+  if(code<=49)return '🌫️';
+  if(code<=59)return '🌧️';
+  if(code<=69)return '🌨️';
+  if(code<=79)return '❄️';
+  if(code<=99)return '⛈️';
+  return '🌥️';
+}
+
+function getWeatherDesc(code){
+  if(code===0)return '晴朗';
+  if(code<=3)return '多雲';
+  if(code<=49)return '霧';
+  if(code<=55)return '毛毛雨';
+  if(code<=59)return '雨';
+  if(code<=65)return '雨';
+  if(code<=69)return '雨夾雪';
+  if(code<=75)return '降雪';
+  if(code<=79)return '雪粒';
+  if(code<=82)return '陣雨';
+  if(code<=86)return '大雪';
+  if(code<=99)return '雷雨';
+  return '多雲';
+}
+
+function renderWeather(day,data,loc){
+  const current=data.current;
+  const daily=data.daily;
+  const hourly=data.hourly;
+  
+  // 計算未來6小時降雪機率和降雪量
+  const now=new Date();
+  const next6h=hourly.time.slice(0,6);
+  const snowfall6h=hourly.snowfall.slice(0,6).reduce((a,b)=>a+(b||0),0);
+  const maxPrecipProb=Math.max(...hourly.precipitation_probability.slice(0,6));
+  
+  // 判斷警示等級
+  let alertLevel='safe',alertMsg='';
+  if(snowfall6h>=10){alertLevel='danger';alertMsg=`⚠️ 大雪警報！預計6小時內降雪 ${snowfall6h.toFixed(1)}cm，請特別注意行車安全`;}
+  else if(snowfall6h>=3){alertLevel='warn';alertMsg=`🌨️ 降雪注意：預計6小時內降雪 ${snowfall6h.toFixed(1)}cm，建議減速慢行`;}
+  else if(current.wind_gusts_10m>=50){alertLevel='warn';alertMsg=`💨 強風注意：陣風達 ${current.wind_gusts_10m.toFixed(0)}km/h，山區路段請小心`;}
+  else if(current.temperature_2m<=-10){alertLevel='info';alertMsg=`🥶 極寒注意：氣溫 ${current.temperature_2m}°C，注意路面結冰`;}
+  else{alertMsg=`✅ 目前路況正常，請保持安全車距`;}
+  
+  // 日出日落時間
+  const sunrise=daily.sunrise[0].split('T')[1];
+  const sunset=daily.sunset[0].split('T')[1];
+  
+  const updateTime=lastWeatherUpdate.toLocaleTimeString('zh-TW',{hour:'2-digit',minute:'2-digit'});
+  
+  document.getElementById('weather-box').innerHTML=`
+    <div class="weather-card">
+      <div class="weather-header">
+        <div class="weather-title">🌤️ ${loc.name} 即時天氣</div>
+        <div class="weather-update">更新 ${updateTime}</div>
+      </div>
+      <div class="weather-alert ${alertLevel}">${alertMsg}</div>
+      <div class="weather-grid">
+        <div class="weather-item">
+          <div class="weather-icon">${getWeatherIcon(current.weather_code)}</div>
+          <div class="weather-label">天氣</div>
+          <div class="weather-value">${getWeatherDesc(current.weather_code)}</div>
+        </div>
+        <div class="weather-item">
+          <div class="weather-icon">🌡️</div>
+          <div class="weather-label">氣溫 / 體感</div>
+          <div class="weather-value cold">${current.temperature_2m}°C / ${current.apparent_temperature}°C</div>
+        </div>
+        <div class="weather-item">
+          <div class="weather-icon">🌅</div>
+          <div class="weather-label">日出</div>
+          <div class="weather-value">${sunrise}</div>
+        </div>
+        <div class="weather-item">
+          <div class="weather-icon">🌇</div>
+          <div class="weather-label">日落</div>
+          <div class="weather-value">${sunset}</div>
+        </div>
+        <div class="weather-item">
+          <div class="weather-icon">❄️</div>
+          <div class="weather-label">6hr降雪預報</div>
+          <div class="weather-value ${snowfall6h>=5?'warn':''}">${snowfall6h.toFixed(1)} cm</div>
+        </div>
+        <div class="weather-item">
+          <div class="weather-icon">💨</div>
+          <div class="weather-label">風速 / 陣風</div>
+          <div class="weather-value ${current.wind_gusts_10m>=40?'warn':''}">${current.wind_speed_10m}/${current.wind_gusts_10m} km/h</div>
+        </div>
+      </div>
+      <div class="road-status">
+        <div class="road-title">🛣️ 相關道路 <a href="https://info-road.hdb.hkd.mlit.go.jp/RoadInfo/index.htm" target="_blank" class="road-link">查看官方路況 →</a></div>
+        ${loc.roads.map(r=>`<div class="road-item"><span class="road-dot unknown"></span><span class="road-name">${r}</span><span class="road-status-text" style="color:var(--light)">請點擊查看</span></div>`).join('')}
+      </div>
+    </div>`;
+}
+
+function renderWeatherError(){
+  document.getElementById('weather-box').innerHTML=`
+    <div class="weather-card">
+      <div class="weather-header"><div class="weather-title">🌤️ 天氣資訊</div></div>
+      <div class="weather-alert info">📡 無法取得天氣資訊，請檢查網路連線</div>
+    </div>`;
 }
 
 function setupNav(){document.querySelectorAll('.nav-item').forEach(item=>{item.addEventListener('click',()=>{document.querySelectorAll('.nav-item').forEach(i=>i.classList.remove('active'));document.querySelectorAll('.page').forEach(p=>p.classList.remove('active'));item.classList.add('active');document.getElementById('page-'+item.dataset.page).classList.add('active');});});}
 function renderDaySelector(){document.getElementById('day-selector').innerHTML=itinerary.map(d=>`<div class="day-btn ${d.day===1?'active':''}" onclick="selectDay(${d.day})"><div class="day-btn-num">${d.day}</div><div class="day-btn-date">${d.date.split('(')[0]}</div></div>`).join('');}
-function selectDay(day){currentDay=day;document.querySelectorAll('.day-btn').forEach((b,i)=>b.classList.toggle('active',i+1===day));renderDay(day);}
+function selectDay(day){currentDay=day;document.querySelectorAll('.day-btn').forEach((b,i)=>b.classList.toggle('active',i+1===day));renderDay(day);fetchWeather(day);}
 function renderDay(day){const d=itinerary.find(i=>i.day===day);document.getElementById('day-content').innerHTML=`<div class="card"><div class="card-header"><div class="card-title">Day ${d.day} ｜ ${d.title}</div><div class="card-sub">${d.date} ・ ${d.km}</div></div><div class="card-body"><div class="timeline">${d.items.map(item=>`<div class="tl-item ${item.type||''}"><div class="tl-dot"></div><div class="tl-time">${item.time}</div><div class="tl-title">${item.title}</div>${item.desc?`<div class="tl-desc">${item.desc}</div>`:''}${item.nav?`<a href="https://www.google.com/maps/search/?api=1&query=${encodeURIComponent(item.nav)}" target="_blank" class="tl-link">📍 導航</a>`:''}</div>`).join('')}</div></div></div>`;}
 
 function renderHotels(){
