--- a/index.html
+++ b/index.html
@@ -137,29 +137,25 @@ body{font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;b
 .backup-box{background:linear-gradient(135deg,#fff3e0,#ffe0b2);border:2px solid var(--orange);border-radius:16px;padding:16px;margin-top:16px}
 .backup-title{font-size:15px;font-weight:700;color:var(--orange);margin-bottom:6px}
 .backup-text{font-size:14px;color:#795548}
-.weather-card{background:#fff;border-radius:16px;margin-bottom:16px;box-shadow:0 2px 12px rgba(0,0,0,.08);overflow:hidden}
-.weather-header{display:flex;justify-content:space-between;align-items:center;padding:12px 16px;background:linear-gradient(135deg,#4fc3f7,#0288d1);color:#fff}
-.weather-title{font-size:15px;font-weight:600}
-.weather-update{font-size:11px;opacity:.85}
-.weather-grid{display:grid;grid-template-columns:1fr 1fr;gap:1px;background:#e0e0e0}
-.weather-item{background:#fff;padding:14px 12px;text-align:center}
-.weather-item.full{grid-column:span 2}
-.weather-icon{font-size:28px;margin-bottom:4px}
-.weather-label{font-size:11px;color:var(--light)}
-.weather-value{font-size:16px;font-weight:700;margin-top:2px}
+.weather-card{background:#fff;border-radius:12px;margin-bottom:12px;box-shadow:0 2px 8px rgba(0,0,0,.06);overflow:hidden}
+.weather-header{display:flex;justify-content:space-between;align-items:center;padding:10px 14px;background:linear-gradient(135deg,#4fc3f7,#0288d1);color:#fff}
+.weather-title{font-size:14px;font-weight:600}
+.weather-update{font-size:10px;opacity:.85}
+.weather-grid{display:grid;grid-template-columns:repeat(3,1fr);gap:1px;background:#e0e0e0}
+.weather-item{background:#fff;padding:8px 6px;text-align:center}
+.weather-label{font-size:10px;color:var(--light)}
+.weather-value{font-size:13px;font-weight:600;margin-top:1px}
 .weather-value.cold{color:#2196f3}.weather-value.warn{color:#ff9800}.weather-value.danger{color:#f44336}.weather-value.safe{color:#4caf50}
-.weather-alert{padding:12px 16px;background:#ffebee;border-left:4px solid #f44336;font-size:14px;color:#c62828;display:flex;align-items:center;gap:10px}
+.weather-alert{padding:8px 14px;background:#ffebee;border-left:3px solid #f44336;font-size:13px;color:#c62828}
 .weather-alert.warn{background:#fff3e0;border-color:#ff9800;color:#e65100}
 .weather-alert.info{background:#e3f2fd;border-color:#2196f3;color:#1565c0}
 .weather-alert.safe{background:#e8f5e9;border-color:#4caf50;color:#2e7d32}
-.road-status{padding:12px 16px;border-top:1px solid #e0e0e0}
-.road-title{font-size:13px;font-weight:600;color:var(--gray);margin-bottom:8px}
-.road-item{display:flex;align-items:center;gap:8px;padding:8px 0;font-size:14px;border-bottom:1px solid #f5f5f5}
-.road-item:last-child{border-bottom:none}
-.road-dot{width:10px;height:10px;border-radius:50%}
+.road-status{padding:10px 14px;border-top:1px solid #e0e0e0}
+.road-title{font-size:12px;font-weight:600;color:var(--gray);margin-bottom:6px;display:flex;justify-content:space-between;align-items:center}
+.road-item{display:inline-flex;align-items:center;gap:4px;padding:4px 8px;font-size:12px;background:#f5f5f5;border-radius:6px;margin:2px 4px 2px 0}
+.road-dot{width:8px;height:8px;border-radius:50%}
 .road-dot.open{background:#4caf50}.road-dot.caution{background:#ff9800}.road-dot.closed{background:#f44336}.road-dot.unknown{background:#9e9e9e}
-.road-name{flex:1}.road-status-text{font-size:12px;font-weight:500}
-.road-link{color:var(--blue);font-size:12px;text-decoration:none}
+.road-link{color:var(--blue);font-size:11px;text-decoration:none}
 .modal{display:none;position:fixed;top:0;left:0;right:0;bottom:0;background:rgba(0,0,0,.5);z-index:200;justify-content:center;align-items:flex-end}
 .modal.active{display:flex}
 .modal-content{background:#fff;width:100%;max-width:500px;border-radius:24px 24px 0 0;padding:24px;padding-bottom:40px;max-height:90vh;overflow-y:auto}
@@ -353,67 +349,38 @@ function renderWeather(day,data,loc){
   const hourly=data.hourly;
   
   // 計算未來6小時降雪機率和降雪量
-  const now=new Date();
-  const next6h=hourly.time.slice(0,6);
   const snowfall6h=hourly.snowfall.slice(0,6).reduce((a,b)=>a+(b||0),0);
-  const maxPrecipProb=Math.max(...hourly.precipitation_probability.slice(0,6));
   
   // 判斷警示等級
   let alertLevel='safe',alertMsg='';
-  if(snowfall6h>=10){alertLevel='danger';alertMsg=`⚠️ 大雪警報！預計6小時內降雪 ${snowfall6h.toFixed(1)}cm，請特別注意行車安全`;}
-  else if(snowfall6h>=3){alertLevel='warn';alertMsg=`🌨️ 降雪注意：預計6小時內降雪 ${snowfall6h.toFixed(1)}cm，建議減速慢行`;}
-  else if(current.wind_gusts_10m>=50){alertLevel='warn';alertMsg=`💨 強風注意：陣風達 ${current.wind_gusts_10m.toFixed(0)}km/h，山區路段請小心`;}
-  else if(current.temperature_2m<=-10){alertLevel='info';alertMsg=`🥶 極寒注意：氣溫 ${current.temperature_2m}°C，注意路面結冰`;}
-  else{alertMsg=`✅ 目前路況正常，請保持安全車距`;}
+  if(snowfall6h>=10){alertLevel='danger';alertMsg=`⚠️ 大雪警報！6hr內降雪 ${snowfall6h.toFixed(1)}cm，請特別注意`;}
+  else if(snowfall6h>=3){alertLevel='warn';alertMsg=`🌨️ 降雪注意：6hr內預計 ${snowfall6h.toFixed(1)}cm`;}
+  else if(current.wind_gusts_10m>=50){alertLevel='warn';alertMsg=`💨 強風注意：陣風 ${current.wind_gusts_10m.toFixed(0)}km/h`;}
+  else if(current.temperature_2m<=-10){alertLevel='info';alertMsg=`🥶 極寒 ${current.temperature_2m}°C，注意路面結冰`;}
+  else{alertLevel='safe';alertMsg=`✅ 路況正常，保持安全車距`;}
   
-  // 日出日落時間
   const sunrise=daily.sunrise[0].split('T')[1];
   const sunset=daily.sunset[0].split('T')[1];
-  
   const updateTime=lastWeatherUpdate.toLocaleTimeString('zh-TW',{hour:'2-digit',minute:'2-digit'});
   
   document.getElementById('weather-box').innerHTML=`
     <div class="weather-card">
       <div class="weather-header">
-        <div class="weather-title">🌤️ ${loc.name} 即時天氣</div>
-        <div class="weather-update">更新 ${updateTime}</div>
+        <div class="weather-title">${getWeatherIcon(current.weather_code)} ${loc.name} ${getWeatherDesc(current.weather_code)}</div>
+        <div class="weather-update">${updateTime} 更新</div>
       </div>
       <div class="weather-alert ${alertLevel}">${alertMsg}</div>
       <div class="weather-grid">
-        <div class="weather-item">
-          <div class="weather-icon">${getWeatherIcon(current.weather_code)}</div>
-          <div class="weather-label">天氣</div>
-          <div class="weather-value">${getWeatherDesc(current.weather_code)}</div>
-        </div>
-        <div class="weather-item">
-          <div class="weather-icon">🌡️</div>
-          <div class="weather-label">氣溫 / 體感</div>
-          <div class="weather-value cold">${current.temperature_2m}°C / ${current.apparent_temperature}°C</div>
-        </div>
-        <div class="weather-item">
-          <div class="weather-icon">🌅</div>
-          <div class="weather-label">日出</div>
-          <div class="weather-value">${sunrise}</div>
-        </div>
-        <div class="weather-item">
-          <div class="weather-icon">🌇</div>
-          <div class="weather-label">日落</div>
-          <div class="weather-value">${sunset}</div>
-        </div>
-        <div class="weather-item">
-          <div class="weather-icon">❄️</div>
-          <div class="weather-label">6hr降雪預報</div>
-          <div class="weather-value ${snowfall6h>=5?'warn':''}">${snowfall6h.toFixed(1)} cm</div>
-        </div>
-        <div class="weather-item">
-          <div class="weather-icon">💨</div>
-          <div class="weather-label">風速 / 陣風</div>
-          <div class="weather-value ${current.wind_gusts_10m>=40?'warn':''}">${current.wind_speed_10m}/${current.wind_gusts_10m} km/h</div>
-        </div>
+        <div class="weather-item"><div class="weather-label">氣溫</div><div class="weather-value cold">${current.temperature_2m}°C</div></div>
+        <div class="weather-item"><div class="weather-label">體感</div><div class="weather-value cold">${current.apparent_temperature}°C</div></div>
+        <div class="weather-item"><div class="weather-label">6hr降雪</div><div class="weather-value ${snowfall6h>=3?'warn':''}">${snowfall6h.toFixed(1)}cm</div></div>
+        <div class="weather-item"><div class="weather-label">風速</div><div class="weather-value">${current.wind_speed_10m}km/h</div></div>
+        <div class="weather-item"><div class="weather-label">日出</div><div class="weather-value">${sunrise}</div></div>
+        <div class="weather-item"><div class="weather-label">日落</div><div class="weather-value">${sunset}</div></div>
       </div>
       <div class="road-status">
-        <div class="road-title">🛣️ 相關道路 <a href="https://info-road.hdb.hkd.mlit.go.jp/RoadInfo/index.htm" target="_blank" class="road-link">查看官方路況 →</a></div>
-        ${loc.roads.map(r=>`<div class="road-item"><span class="road-dot unknown"></span><span class="road-name">${r}</span><span class="road-status-text" style="color:var(--light)">請點擊查看</span></div>`).join('')}
+        <div class="road-title"><span>🛣️ 相關道路</span><a href="https://northern-road.jp/navi/index.htm" target="_blank" class="road-link">北の道ナビ →</a></div>
+        <div>${loc.roads.map(r=>`<span class="road-item"><span class="road-dot unknown"></span>${r}</span>`).join('')}</div>
       </div>
     </div>`;
 }
@@ -422,7 +389,7 @@ function renderWeatherError(){
   document.getElementById('weather-box').innerHTML=`
     <div class="weather-card">
       <div class="weather-header"><div class="weather-title">🌤️ 天氣資訊</div></div>
-      <div class="weather-alert info">📡 無法取得天氣資訊，請檢查網路連線</div>
+      <div class="weather-alert info">📡 無法取得天氣，請檢查網路</div>
     </div>`;
 }
 
