--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
 <meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+<meta name="apple-mobile-web-app-title" content="北海道2026">
+<link rel="apple-touch-icon" href="images/apple-touch-icon.png">
+<link rel="icon" type="image/png" href="images/apple-touch-icon.png">
 <title>北海道2026</title>
 <style>
 :root{--ice:#e3f2fd;--blue:#1976d2;--navy:#0d47a1;--orange:#ff6d00;--red:#e53935;--purple:#7c4dff;--green:#00c853;--gray:#546e7a;--light:#90a4ae;--bg:#f5f5f5}
@@ -18,6 +22,9 @@ body{font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;b
 @keyframes spin{to{transform:rotate(360deg)}}
 .content{flex:1;overflow-y:auto;overflow-x:hidden;-webkit-overflow-scrolling:touch}
 .page{display:none;padding:16px;padding-bottom:80px;min-height:100%}.page.active{display:block}
+#page-itinerary{position:relative}
+#page-itinerary::before{content:'';position:absolute;top:0;left:0;right:0;bottom:0;background-image:url('images/bg-cinnamoroll.jpg');background-size:cover;background-position:center;background-repeat:no-repeat;opacity:0.5;pointer-events:none;z-index:0}
+#page-itinerary>*{position:relative;z-index:1}
 .nav{position:fixed;bottom:0;left:50%;transform:translateX(-50%);width:100%;max-width:500px;background:#fff;display:flex;border-top:1px solid #e0e0e0;box-shadow:0 -2px 10px rgba(0,0,0,.05);z-index:100}
 .nav-item{flex:1;padding:8px 4px;text-align:center;color:var(--gray);text-decoration:none}.nav-item.active{color:var(--blue)}
 .nav-item span{display:block;font-size:22px;margin-bottom:2px}.nav-item small{font-size:10px}
